@@ -13,6 +13,10 @@ defined('_JEXEC') or die;
 // Create a shortcut for params.
 $params = &$this->item->params;
 $canEdit = $this->user->authorise('core.edit', 'com_content.category.' . $this->item->id);
+JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
+JHtml::_('behavior.tooltip');
+JHtml::core();
+
 ?>
 
 <?php if ($this->item->state == 0) : ?>
