@@ -11,13 +11,12 @@
 defined('_JEXEC') or die;
 
 // Get the user object.
-$user = JFactory::getUser();
-// Check if user is allowed to add/edit based on content permissinos.
-$canEdit = $this->user->authorise('core.edit', 'com_content.category.');
-$canCreate = $this->user->authorise('core.create', 'com_content');
+//$user = JFactory::getUser();
+$params = &$this->item->params;
+// Check if user is allowed to add/edit based on content permissions.
 
-
-JHtml::addIncludePath(JPATH_COMPONENT.DS.'helpers'.DS.'html');
+//var_dump($this->items);die;
+JHtml::addIncludePath(JPATH_COMPONENT.'/helpers/html');
 JHtml::_('behavior.tooltip');
 JHtml::core();
 
@@ -88,18 +87,24 @@ $listDirn	= $this->state->get('list.direction');
 
 		<tbody>
 
-			<?php foreach ($this->items as $i => &$article) : ?>
+			<?php foreach ($this->items as $i => $article) : ?>
 			<tr class="cat-list-row<?php echo $i % 2; ?>">
 
 				<?php if (in_array($article->access, $this->user->authorisedLevels())) : ?>
 
 					<td class="list-title">
+				
 						<a href="<?php echo JRoute::_(ContentHelperRoute::getArticleRoute($article->slug, $article->catid)); ?>">
 						<?php echo $this->escape($article->title); ?></a>
+						<?php $canEdit = $this->user->authorise('core.edit', 'com_content.category.'.$article->id); ?>
+						<?php $canCreate = $this->user->authorise('core.create', 'com_content.category.'); ?>
 
 						<?php if ($canEdit) : ?>
-							<span class="hasTip" title="<?php echo JText::_('COM_CONTENT_EDIT_ITEM'); ?>"><a href="<?php echo JRoute::_(ContentHelperRoute::getFormRoute((int) $article->id));?>">
-							<img src="media/system/images/edit.png" alt="Edit"></img></a></span>
+							<ul class="actions">
+								<li class="edit-icon">
+									<?php echo JHtml::_('icon.edit',$article, $params); ?>
+								</li>
+							</ul>
 						<?php endif; ?>
 						
 					</td>
@@ -139,6 +144,7 @@ $listDirn	= $this->state->get('list.direction');
 						<?php echo JText::_( 'COM_CONTENT_REGISTER_TO_READ_MORE' ); ?></a>
 				</td>
 				<?php endif; ?>
+				
 			</tr>
 			<?php endforeach; ?>
 		</tbody>
